# openmeeg

./: .appveyor.yml  .clang-format-ignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  CTestConfig.cmake  ChangeLog  Copyright.txt  LICENSE  LICENSE.txt  Makefile.am  NEWS  OpenMEEGConfigure.h.in  README  README.md  README.rst  README.txt  README_Geom.rst  Session.vim  UseAtlas.cmake  UseOpenMP.cmake  UseWin32dlls.cmake  appveyor.yml  autogen.gen  coding_guidelines.txt  conanfile.txt  configure.ac  debug_meg_lf.py  file_header.txt  openmeeg.rb  openmeeg_deploy_key.enc  paraview.pvsm  vcpkg.json  (+1 more)
OpenMEEG/: .travis.yml  AUTHORS  CMakeLists.txt  KWStyleFilesToCheck.txt  LICENSE.txt  OpenMEEGConfigure.h.in  README.rst  coding_guidelines.txt  file_header.txt
OpenMEEG/ci/: JenkinsBuildScript-unix.sh
OpenMEEG/cmake/: AddDemoTarget.cmake  BlasLapack.cmake  BlasLapackOption.cmake  CheckCXXFeatures.cmake  ComparisonTest.cmake  CompileOptions.cmake  CreateTestEnvironment.cmake  FindAtlas.cmake  FindGIFTI.cmake  FindLibrary.cmake  FindMKL.cmake  FindNIFTI.cmake  FindOpenBLAS.cmake  Findmatio.cmake  FindvecLib.cmake  GenerateConfigFile.cmake  InstallMKL.cmake  KWStyle.cmake  OpenMEEGOptions.cmake  Packaging.cmake  Standalone.cmake  TestOption.cmake  UnitTest.cmake  UseACML.cmake  UseAtlas.cmake  UseAuto.cmake  UseCGAL.cmake  UseCgal.cmake  UseGifti.cmake  UseLAPACK.cmake  UseLapack.cmake  UseMKL.cmake  UseMkl.cmake  UseOpenBLAS.cmake  UseOpenBlas.cmake  UseOpenMP.cmake  UseVTK.cmake  UseVtk.cmake  UseWin32dlls.cmake  UsevecLib.cmake  (+3 more)
OpenMEEG/data/: README.rst
OpenMEEG/documentation/: CMakeLists.txt
OpenMEEG/include/: DataTag.H  ECoGsensors.h  EEGsensors.h  EITsensors.h  FileExceptions.H  GeometryExceptions.H  GeometryIO.h  MEGsensors.h  MeshIO.h  NullStream.h  OMExceptions.H  Properties.H  PropertiesSpecialized.h  Triangle_triangle_intersection.h  analytics.h  assemble.h  boundingbox.h  commandline.h  constants.h  danielsson.h  dipole.h  domain.h  edge.h  filenames.h  forward.h  gain.h  geometry.h  geometry_io.h  geometry_reader.h  gmres.h  integrator.h  interface.h  isnormal.H  logger.h  mesh.h  mesh_ios.h  monopole.h  om_common.h  om_utils.h  operators.h  (+6 more)
OpenMEEG/packaging/: OpenMEEG.spec.in
OpenMEEG/src/: CMakeLists.txt  ECoGsensors.cpp  EEGsensors.cpp  EITsensors.cpp  GeometryIOs.cpp  MEGsensors.cpp  TestHead.cmake  TestHead.txt  assemble.cpp  assembleFerguson.cpp  assembleHeadMat.cpp  assembleSensors.cpp  assembleSourceMat.cpp  cpuChrono.h  danielsson.cpp  domain.cpp  gain.cpp  geometry.cpp  interface.cpp  mesh.cpp  mesh_ios.cpp  minverser.cpp  operators.cpp  presmooth.cpp  sensors.cpp  triangle.cpp
OpenMEEG/tests/: CMakeLists.txt  compare_matrix.cpp  load_geo.cpp  test_mesh_ios.cpp  test_sensors.cpp  validationEIT.cpp
OpenMEEG/tools/: CMakeLists.txt  add_dataset_to_vtk.cpp  cgal_decimate.cpp  cgal_lib.h  cgal_lib_decimate.cpp  cgal_lib_function.h  cgal_mesh.cpp  cgal_mesh.h  cgal_mesh_3Dlabeled_image.cpp  cgal_mesh_3Dlevelset_image.cpp  cgal_mesh_function.cpp  cgal_remesh.cpp  check_geom.cpp  geometry_info.cpp  make_nerve.cpp  matrix_convert.cpp  mesh_convert.cpp  mesh_smooth.cpp  mesh_to_dip.cpp  meshes_to_vtp.cpp  vtp_to_meshes.cpp
Wrapping/src/: CMakeLists.txt  FindNumpy.cmake  doxy2swig.py  openmeeg.i  test_python.py
apps/: CMakeLists.txt  ComparisonTest.cmake  ComparisonTest_caller.cmake  TestHead.cmake  assemble.cpp  cpuChrono.h  forward.cpp  gain.cpp  minverser.cpp  presmooth.cpp
apps/tools/: CMakeLists.txt  add_dataset_to_vtk.cpp  cgal_decimate.cpp  cgal_lib.h  cgal_lib_decimate.cpp  cgal_lib_function.cpp  cgal_lib_function.h  cgal_lib_image.cpp  cgal_mesh_3Dlabeled_image.cpp  cgal_mesh_3Dlevelset_image.cpp  cgal_mesh_function.cpp  cgal_remesh.cpp  check_geom.cpp  geometry_info.cpp  make_nerve.cpp  matrix_convert.cpp  matrix_info.cpp  mesh_concat.cpp  mesh_convert.cpp  mesh_info.cpp  mesh_smooth.cpp  mesh_to_dip.cpp  meshes_to_vtp.cpp  project_sensors.cpp  register_squids.cpp  squids2vtk.cpp  vtp_to_meshes.cpp
contrib/: CMakeLists.txt  README
contrib/clapack-3.2.1-CMAKE/: CMakeLists.txt
contrib/matio/: .gitmodules  CMakeLists.txt  MATIO_PLAT  README  aclocal.m4  (+2 more)
documentation/: CMakeLists.txt  doxyfile.in
src/: CMakeLists.txt  DLLDefinesOpenMEEG.h  DataTag.H  DataTag.h  FileExceptions.H  GeometryExceptions.H  IOUtils.H  IOUtils.h  Makefile.am  MeshDataSmoother.h  MeshDescriptionReader.h  MeshDescriptionReaderSpecialized.h  MeshReader.h  Properties.H  Properties.h  PropertiesSpecialized.h  TestHead.txt  TestHead1.txt  TestHead2.txt  TestHead3.txt  Triangle_triangle_intersection.h  analytics.h  analytiques.h  assemble.cpp  assemble.h  assembleFerguson.cpp  assembleHeadMat.cpp  assembleHeadMatNew.cpp  assembleHeadMatNewNew.cpp  assembleLHS.cpp  assembleMat.cpp  assembleRHS.cpp  assembleSensors.cpp  assembleSourceMat.cpp  assemble_RHSmatrix.cpp  assemble_squids_EEG.cpp  conditioning.h  cpuChrono.cpp  cpuChrono.h  danielsson.cpp  (+47 more)
tests/: CMakeLists.txt  ComparisonTest_caller.cmake  Makefile.am  TestHead.cmake  clean_tests.cmake  compare_matrix.cpp  load_geo.cpp  other.cmake  sensors.cpp  test_compare_matrix.cpp  test_load_geo.cpp  test_mesh_ios.cpp  test_sensors.cpp  test_validationEIT.cpp  validationEIT.cpp
tools/: AddDataSetToVtk.cpp  CMakeLists.txt  add_dataset_to_vtk.cpp  cgal_mesh.h  cgal_mesh_3D_image.cpp  cgal_mesh_3Dlabeled_image.cpp  cgal_mesh_3Dlevelset_image.cpp  cgal_mesh_create.cpp  cgal_mesh_function.cpp  cgal_mesh_include.h  cgal_remesh.cpp  check_geom.cpp  cortex_patch.cpp  extract_frames.cpp  geometry_info.cpp  make_nerve.cpp  matbin2txt.cpp  matrix_convert.cpp  matrix_info.cpp  mattxt2bin.cpp  mesh_concat.cpp  mesh_convert.cpp  mesh_info.cpp  mesh_smooth.cpp  mesh_to_dip.cpp  mesh_to_vtp.cpp  meshconvert.cpp  meshes_to_vtp.cpp  options.h  project_sensors.cpp  register_squids.cpp  sparse_matrix_convert.cpp  squids2vtk.cpp  symbin2txt.cpp  symmatrix_convert.cpp  symtxt2bin.cpp  tex2mask.cpp  tex2txt.cpp  txt2tex.cpp  vector_convert.cpp  (+1 more)
(+1528 files in other folders)
